align issues are addressed.

--- a/src/app/tables/sort-paginate-table/sort-paginate-table.component.css
+++ b/src/app/tables/sort-paginate-table/sort-paginate-table.component.css
@@ -1,5 +1,26 @@
 /* Structure */
 .example-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+
+.example-header {
+  min-height: 64px;
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  font-size: 20px;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
+
+
+/* Structure */
+.example-container {
     display: flex;
     flex-direction: column;
     min-width: 300px;
@@ -13,11 +34,34 @@
     font-size: 20px;
   }
   
-  mat-table {
-    border: 1;
-  }
+  .mat-table {
+    display: table;
+    width: 100%;
+}
+
+
+.mat-header-row,  .mat-row {
+  display: table-row;
+  padding: 0;
+  border: none;
+
+}
+
+
+.mat-header-cell,  .mat-cell {
+  display: table-cell;
+  height: 48px;
+  vertical-align: middle;
+
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.mat-column-userName {
+  display: flex;
+  text-align: center;
+  } 
   
-  .mat-header-cell .mat-sort-header-sorted {
+  /* .mat-header-cell .mat-sort-header-sorted {
     color: black;
     font-size: 80px;
   }
@@ -25,23 +69,23 @@
   mat-header-row {
     align-items: center;
     
-  }
+  } */
   /* this works */
-  mat-header-cell {
+  /* mat-header-cell {
     color: black;
     border: 1;
 
-  }
+  } */
 
-  mat-cell {    
+  /* mat-cell {    
     border: 1;
   }
 
   mat-sort-header-button {
     color: black;
-  }
+  } */
 
-  .mat-column-userId {
+  /* .mat-column-userId {
     display: flex;
     text-align: center;
     }
@@ -49,9 +93,9 @@
     .mat-column-userName {
       display: flex;
       text-align: center;
-      }
+      } */
   
-      .mat-column-progress {
+      /* .mat-column-progress {
         display: flex;
         text-align: center;
         }
@@ -60,13 +104,13 @@
           display: flex;
           text-align: center;
           }
-        
+         */
 
-  .mat-header-row, .mat-row {
+  /* .mat-header-row, .mat-row {
     display: flex;
     border-bottom-width: 1px;
     border-bottom-style: solid;
     align-items: center;
     min-height: 48px;
     padding: 0 24px;
-  }
+  } */
